--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -11,7 +11,11 @@
     "### Analysis\n",
     "\n",
     "- A corelation coefficient of 0.84 indicates a strong positive corelation between the variables mouse weight and average tumor volumne. As the mouse weight increases the relationship is direct. Heavier mice means there is more likeley to have larger tumor volumnes on average. Although there is a strong corelation , this does not necessarly imply causation - we cannot say weight causes tumors to grow larger without further investigation.\n",
-    " "
+    " - The box plot reveals notable differences in tumor volume distributions across the four treatment groups:\n",
+    "    Capomilin and Ramicane show lower median tumor volumes and less variability, suggesting they are more consistent and effective at reducing tumor sizes.\n",
+    "    Infubinol and Ceftamin show higher tumor volumes and greater variability, indicating they may be less effective. \n",
+    "    There is a potential outlier in the Infubinol group which may require further investigation. \n",
+    "- In summary these results highlight the potential efficacy of Capomulin and ramicane as promissing treatments to reduce tumor size. "
    ]
   },
   {
@@ -811,6 +815,173 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>SEM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>50.446266</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "      <td>0.544332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Mean     Median   Variance  Standard Deviation       SEM\n",
+       "Drug Regimen                                                               \n",
+       "Capomulin     40.675741  41.557809  24.947764            4.994774  0.329346\n",
+       "Ceftamin      52.591172  51.776157  39.290177            6.268188  0.469821\n",
+       "Infubinol     52.884795  51.820584  43.128684            6.567243  0.492236\n",
+       "Ketapril      55.235638  53.698743  68.553577            8.279709  0.603860\n",
+       "Naftisol      54.331565  52.509285  66.173479            8.134708  0.596466\n",
+       "Placebo       54.033581  52.288934  61.168083            7.821003  0.581331\n",
+       "Propriva      52.320930  50.446266  43.852013            6.622085  0.544332\n",
+       "Ramicane      40.216745  40.673236  23.486704            4.846308  0.320955\n",
+       "Stelasyn      54.233149  52.431737  59.450562            7.710419  0.573111\n",
+       "Zoniferol     53.236507  51.818479  48.533355            6.966589  0.516398"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the grouby method to create a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "\n",
+    "grouped_data = cleaned_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"]\n",
+    "mean_tumor_volume = grouped_data.mean()\n",
+    "median_tumor_volume = grouped_data.median()\n",
+    "variance_tumor_volume = grouped_data.var()\n",
+    "std_tumor_volume = grouped_data.std()\n",
+    "sem_tumor_volume = grouped_data.sem()\n",
+    "\n",
+    "summary_stats = pd.DataFrame({\n",
+    "    \"Mean\": mean_tumor_volume,\n",
+    "    \"Median\": median_tumor_volume,\n",
+    "    \"Variance\": variance_tumor_volume,\n",
+    "    \"Standard Deviation\": std_tumor_volume,\n",
+    "    \"SEM\": sem_tumor_volume\n",
+    "})\n",
+    "summary_stats\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1065,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1245,7 @@
      "text": [
       "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
       "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Infubinol's potential outliers: 15    36.321346\n",
+      "Infubinol's potential outliers: 31    36.321346\n",
       "Name: Tumor Volume (mm3), dtype: float64\n",
       "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
      ]
@@ -1082,13 +1253,31 @@
    ],
    "source": [
     "# Put treatments into a list for the loop (and later for plot labels)\n",
-    "treatments = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
+    "# treatments = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
     "\n",
     "# Loop through each treatment\n",
-    "for treatment in treatments:\n",
+    "# for treatment in treatments:\n",
     "    # Locate the rows for mice on each drug regimen and get the tumor volumes\n",
-    "    treatment_data = final_tumor_volume[final_tumor_volume[\"Drug Regimen\"] == treatment][\"Tumor Volume (mm3)\"]\n",
-    "    \n",
+    "    # treatment_data = final_tumor_volume[final_tumor_volume[\"Drug Regimen\"] == treatment][\"Tumor Volume (mm3)\"]\n",
+    "# Step 1: Create a DataFrame that has the last timepoint for each mouse ID using groupby()\n",
+    "last_timepoints = cleaned_data.groupby(\"Mouse ID\")[\"Timepoint\"].max().reset_index()\n",
+    "\n",
+    "# Step 2: Merge the last_timepoints DataFrame with the original cleaned_data to get the tumor volume at the last timepoint\n",
+    "merged_data = pd.merge(last_timepoints, cleaned_data, on=[\"Mouse ID\", \"Timepoint\"], how=\"left\")\n",
+    "\n",
+    "# Step 3: The four treatment groups are put in a list\n",
+    "treatment_groups = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
+    "\n",
+    "# Step 4: Create an empty list to fill with tumor volume data for each treatment group\n",
+    "tumor_volumes = []\n",
+    "\n",
+    "# Step 5: Use a for loop to calculate IQR and identify outliers for each treatment group\n",
+    "for treatment in treatment_groups:\n",
+    "    # Filter data for the current treatment group\n",
+    "    treatment_data = merged_data[merged_data[\"Drug Regimen\"] == treatment][\"Tumor Volume (mm3)\"]\n",
+    " # Append the tumor volume data to the list\n",
+    "    tumor_volumes.append(treatment_data)\n",
+    "\n",
     "    # Calculate the IQR and quantitatively determine if there are any potential outliers\n",
     "    quartiles = treatment_data.quantile([0.25, 0.5, 0.75])\n",
     "    lowerq = quartiles[0.25]\n",
@@ -1138,6 +1327,13 @@
     "# Display the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Capomulin and Ramicane have lower median tumor volumes copared to Infubinol and Ceftamin, suggesting they might be more effective in reducing tumor sizes. Infubinol represents a potential outlier which is smaller than typical range for this treatment group. At approximatley 36.32 mm"
    ]
   },
   {
